--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
   "name": "react-social-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Fastify server for handling API requests for the react-social project.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "fastify start server.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Raymond Cortes",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
     "fastify": "^3.28.0",
+    "fastify-cli": "^2.15.0",
     "fastify-cors": "^6.0.3",
     "fastify-helmet": "^7.0.1",
+    "fastify-mongodb": "^4.1.1",
+    "fastify-plugin": "^3.0.1",
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
   }
 }
