--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fastify-helmet": "^7.0.1",
     "fastify-mongodb": "^4.1.1",
     "fastify-plugin": "^3.0.1",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0"
   }
